# LEAP-upper-limb

./: .gitignore  .gitmodules  README.md  leap-upper-limb.code-workspace
.github/workflows/: codeql-analysis.yml
3d_model/: Upper-limb[01-v4.3].stp
matlab/: .gitignore  TestClass.m  UpperLimb.m  invKin2R.m  makeUpperLimb.m
pcb/: .gitignore
pcb/master-controller/: master-controller.kicad_pcb  master-controller.kicad_prl  master-controller.kicad_pro  master-controller.kicad_sch
pcb/motor-controller_maxon/: motor-controller_maxon.kicad_pcb  motor-controller_maxon.kicad_prl  motor-controller_maxon.kicad_pro  motor-controller_maxon.kicad_sch
pcb/motor-controller_simpleFOC/: motor-controller_simpleFOC.kicad_pcb  motor-controller_simpleFOC.kicad_prl  motor-controller_simpleFOC.kicad_pro  motor-controller_simpleFOC.kicad_sch
research/PID_controller/: pid.jl  pid_plot.jl  pid_runner.jl  pid_simulator.jl  readme.md
research/kinematics/: fk2r.m  invKin2R.m
research/pid-simulator/: Project.toml  readme.md
ros2_ws/: .gitignore  readme.md  ros2_ws.code-workspace
ros2_ws/src/simple_2r_arm/simple_2r_arm_control_hardware/: CMakeLists.txt  package.xml  simple_2r_arm_control_hardware.xml
ros2_ws/src/simple_2r_arm/simple_2r_arm_control_hardware/include/simple_2r_arm_control_hardware/: rrbot_system_position_only.hpp  simple_2r_arm_system_position_only.hpp  visibility_control.h
ros2_ws/src/simple_2r_arm/simple_2r_arm_control_hardware/src/: rrbot_system_position_only.cpp  simple_2r_arm_system_position_only.cpp
ros2_ws/src/simple_2r_arm/simple_2r_arm_description/: CMakeLists.txt  package.xml
ros2_ws/src/simple_2r_arm/simple_2r_arm_description/config/: simple_2r_arm.rviz
ros2_ws/src/simple_2r_arm/simple_2r_arm_description/gazebo/: simple_2r_arm.materials.xacro
ros2_ws/src/simple_2r_arm/simple_2r_arm_description/launch/: view_robot.launch.py
ros2_ws/src/simple_2r_arm/simple_2r_arm_description/ros2_control/: simple_2r_arm.ros2_control.xacro
ros2_ws/src/simple_2r_arm/simple_2r_arm_description/urdf/: simple_2r_arm.urdf.xacro  simple_2r_arm_description.urdf.xacro
ros2_ws/src/simple_3r_arm/simple_3r_arm_hardware/: CMakeLists.txt  package.xml  simple_3r_arm_hardware.xml
ros2_ws/src/simple_3r_arm/simple_3r_arm_hardware/include/simple_3r_arm_hardware/: simple_3r_arm_system_position_only.hpp  visibility_control.h
ros2_ws/src/simple_3r_arm/simple_3r_arm_hardware/src/: simple_3r_arm_system_position_only.cpp
ros2_ws/src/simple_3r_arm/simple_3r_arm_launch/: CMakeLists.txt  package.xml
ros2_ws/src/simple_3r_arm/simple_3r_arm_launch/config/: simple_3r_arm_controllers.yaml  simple_3r_arm_forward_position_publisher.yaml  simple_3r_arm_joint_control_publisher.yaml
ros2_ws/src/simple_3r_arm/simple_3r_arm_launch/launch/: simple_3r_arm.launch.py  simple_3r_arm_with_kinematics.launch.py  simple_3r_arm_with_relative_motion.launch.py  simple_3r_arm_with_relative_motion_topic.launch.py  test_forward_position_controller.launch.py  test_s3ra_joint_control.launch.py
stm32/: leap-up-stm32.elf.launch  stm32.code-workspace  stm32_flash.ld
stm32/Debug/: leap-up-stm32.elf  leap-up-stm32.list  leap-up-stm32.map
stm32/hi-level/: .cproject  .gitignore  .mxproject  .project  LEAPup_hi-lv_test_1 Debug.launch  LEAPup_hi-lv_test_1.ioc
stm32/maxon ESCON 70-10 basic control/: .cproject  .project
stm32/src/: gpio.cpp  gpio.hpp  main.cpp  pwm.cpp  pwm.hpp  stm32f103rb_gpio_mapping.h  stm32f1xx_it.c  tiny_printf.c  usart.cpp  usart.hpp
stm32/stm32_simple_foc/: platformio.ini
test/B-G431B-ESC1_SimpleFOC_test_1/: platformio.ini
test/LEAP-up_system/: leap_up_system.h
test/WACOH_TFsensor_test/: platformio.ini
test/maxon_escon_pid_control/: platformio.ini
test/stm32_force_sensor_test/: platformio.ini
test/stm32_hal_3_axis_force_sensor_test/: platformio.ini
test/stm32_hal_as5047p_test/: .gitignore  stm32_hal_as5047p_test.ioc
test/stm32_hal_escon_motor_controller/: .gitignore  stm32_hal_escon_motor_controller.ioc
test/stm32_simpleFOC-test/: platformio.ini
(+231 files in other folders)
