<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_3r_arm_hardware</name>
  <version>0.0.0</version>
  <description>
    This package was copied and modified from ros2_control_demos (https://github.com/ros-controls/ros2_control_demos).
  </description>
  <maintainer email="honmonoh@gmail.com">ziteh</maintainer>
  <license>Apache-2.0 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
