<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_3r_arm_launch</name>
  <version>0.0.0</version>
  <description>
    This package was copied and modified from ros2_control_demos (https://github.com/ros-controls/ros2_control_demos).
  </description>
  <maintainer email="honmonoh@gmail.com">ziteh</maintainer>
  <license>Apache-2.0 License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>


  <exec_depend>forward_position_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>simple_3r_arm_hardware</exec_depend>
  <exec_depend>simple_3r_arm_description</exec_depend>
  <exec_depend>ros2_control_test_nodes</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
